--- a/css/styles.css
+++ b/css/styles.css
@@ -294,6 +294,11 @@ img {
   display: flex;
   flex-direction: column;
   position: relative;
+  margin-bottom: 10px;
+}
+
+.form-modal-box-last {
+  margin-bottom: 0;
 }
 
 .form-modal-box label {
@@ -314,7 +319,7 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   cursor: pointer;
-  margin-bottom: 10px;
+  
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
