--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,27 @@ img {
   overflow: hidden;
 }
 
+.button {
+  background-color: var(--active-button-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  color: var(--background-header-color);
+  cursor: pointer;
+  border-radius: 4px;
+  border: 0;
+  display: block;
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button:hover, 
+.button:focus {
+  background-color: var(--hover-button-color);
+  color: var(--background-header-color);
+}
+
 /* -- Section header -- */
 
 .header {
@@ -59,7 +80,7 @@ img {
   display: flex;
   align-items: center;
 }
-.header .logo {
+.logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -68,54 +89,51 @@ img {
   text-decoration: none;
   display: block;
 }
-.header .logo-right {
+.logo-right {
   color: var(--title-color);
 }
 .navigator {
   display: flex;
   margin-left: 93px;
 }
-.navigator .paragraph-navigator + .paragraph-navigator {
+.navigator__paragraph + .navigator__paragraph {
   margin-left: 50px;
 }
-.link-navigator {
+.navigator__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
   color: var(--title-color);
   text-decoration: none;
 }
-.link-navigator.current {
+.navigator__link--current {
   color: var(--active-button-color);
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link-navigator:hover,
-.link-navigator:focus,
-.link-navigator:active {
+.navigator__link:hover, :focus, :active {
   color: var(--active-button-color);
 }
 .contacts {
   display: flex;
   margin-left: auto;
 }
-.contacts .paragraph-contacts + .paragraph-contacts {
+.contacts__paragraph + .contacts__paragraph {
   margin-left: 50px;
 }
-.link-contacts {
+.contacts__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
   color: var(--text-color);
   text-decoration: none;
 }
-.link-contacts:hover,
-.link-contacts:focus {
+.contacts__link:hover, :focus {
   color: var(--active-button-color);
 }
-.link-navigator,
-.link-contacts {
+.navigator__link,
+.contacts__link {
   display: inline-flex;
   align-items: center;
   padding-top: 32px;
@@ -124,13 +142,13 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-mail {
+.contacts__icon--mail {
   width: 16px;
   height: 12px;
   margin-right: 10px;
   fill: currentColor;
 }
-.icon-tel {
+.contacts__icon--tel {
   width: 10px;
   height: 16px;
   margin-right: 10px;
@@ -139,13 +157,13 @@ img {
 
 /* -- Underline function -- */
 
-.link-navigator.current {
+.navigator__link--current {
   position: relative;
   transition-property: opacity;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link-navigator.current::after {
+.navigator__link--current::after {
   display: inline-block;
   position: absolute;
   content: " ";
@@ -156,7 +174,7 @@ img {
   bottom: -1px;
   left: 0;
 }
-.link-navigator.current:hover::after {
+.navigator__link--current:hover::after {
   opacity: 1;
 }
 
@@ -167,6 +185,8 @@ img {
   height: 600px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -178,47 +198,23 @@ img {
   background-size: cover;
   background-color: var(--background-footer-color);
 }
-.hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-.title-hero {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
   color: var(--background-header-color);
   text-align: center;
-}
-.title-hero {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
   width: 696px;
 }
-.button-hero {
-  background-color: var(--active-button-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.9;
-  color: var(--background-header-color);
-  cursor: pointer;
-  border-radius: 4px;
-  border: 0;
-}
-.button-hero {
+.hero__button {
   min-width: 200px;
   padding: 10px 32px;
-  display: block;
   margin: 0 auto;
-  transition-property: background-color, color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button-hero:hover,
-.button-hero:focus {
-  background-color: var(--hover-button-color);
-  color: var(--background-header-color);
-}
+
 /* -- Modal window -- */
 
 .backdrop {
@@ -251,6 +247,25 @@ img {
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
 }
+.modal__title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.2;
+  color: rgba(33, 33, 33, 1);
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40;
+  margin-bottom: 12px;
+}
+.modal__button {
+  min-width: 200px;
+  padding: 10px 55px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+}
 
 .button-close {
   position: absolute;
@@ -267,7 +282,7 @@ img {
   justify-content: center;
   cursor: pointer;
 }
-.button-icon-close {
+.button-close__icon {
   width: 18px;
   height: 18px;
 }
@@ -275,33 +290,18 @@ img {
   fill: #2196f3;
 }
 
-.title-modal {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.2;
-  color: rgba(33, 33, 33, 1);
-  letter-spacing: 0.03em;
-  text-align: center;
-}
-.title-modal {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 40;
-  margin-bottom: 12px;
-}
-
-.form-modal-box {
+.form-modal {
   display: flex;
   flex-direction: column;
   position: relative;
   margin-bottom: 10px;
 }
 
-.form-modal-box-last {
+.form-modal--last {
   margin-bottom: 0;
 }
 
-.form-modal-box label {
+.form-modal__label {
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
@@ -310,7 +310,7 @@ img {
   letter-spacing: 0.01em;
 }
 
-.form-modal-box input {
+.form-modal__input {
   height: 40px;
   padding-left: 40px;
   padding-top: 14px;
@@ -319,13 +319,12 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   cursor: pointer;
-  
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-modal-box textarea {
+.form-modal__textarea {
   height: 120px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -337,54 +336,35 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-modal-box textarea::placeholder {
+.form-modal__icon {
+  position: absolute;
+  top: 29px;
+  left: 14px;
+  width: 18px;
+  height: 18px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-modal__textarea::placeholder {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.2;
   color: rgba(117, 117, 117, 0.5);
 }
 
-.form-modal-box textarea:focus,
-.form-modal-box input:focus {
+.form-modal__textarea:focus,
+.form-modal__input:focus {
   border-color: #2196f3;
   outline: none;
 }
 
-.form-modal-box input:focus ~ .icon {
+.form-modal__input:focus ~ .form-modal__icon {
   fill: #2196f3;
 }
 
-.icon {
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-person {
-  position: absolute;
-  top: 29px;
-  left: 14px;
-  width: 18px;
-  height: 18px;
-}
-
-.icon-phone {
-  position: absolute;
-  top: 29px;
-  left: 14px;
-  width: 18px;
-  height: 18px;
-}
-
-.icon-email {
-  position: absolute;
-  top: 29px;
-  left: 14px;
-  width: 18px;
-  height: 18px;
-}
-
-.label-checkbox {
+.checkbox__label {
   margin-top: 20px;
   display: flex;
   align-items: center;
@@ -396,26 +376,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-.icon-check {
-  width: 16px;
-  height: 15px;
-  border: 2px solid #212121;
-  border-radius: 2px;
-  margin-right: 7px;
-  transition-property: background-color, border-color, background-image;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.checkbox:checked + .icon-check {
-  background-color: var(--active-button-color);
-  border-color: var(--active-button-color);
-  background-image: url(../images/icons.svg/form/check.svg);
-  background-size: contain;
-  background-origin: border-box;
-}
-
-.checkbox {
+.checkbox__input {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -426,36 +387,28 @@ img {
   overflow: hidden;
 }
 
-.link-checkbox {
+.checkbox__icon {
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  margin-right: 7px;
+  transition-property: background-color, border-color, background-image;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox__link {
   margin-left: 5px;
   color: var(--active-button-color);
 }
 
-.button-modal-send {
+.checkbox__input:checked + .checkbox__icon {
   background-color: var(--active-button-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.06em;
-  color: var(--background-header-color);
-  cursor: pointer;
-  border-radius: 4px;
-  border: 0;
-}
-.button-modal-send {
-  min-width: 200px;
-  padding: 10px 55px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
-
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button-modal-send:hover {
-  background-color: #188ce8;
+  border-color: var(--active-button-color);
+  background-image: url(../images/icons.svg/form/check.svg);
+  background-size: contain;
+  background-origin: border-box;
 }
 
 /* -- Section advantages -- */
@@ -778,7 +731,7 @@ img {
   display: flex;
   align-items: baseline;
 }
-.footer .logo {
+.logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -786,7 +739,7 @@ img {
   color: var(--active-button-color);
   text-decoration: none;
 }
-.footer .logo-right {
+.logo-right--colour {
   color: var(--background-header-color);
 }
 .footer-address {
