--- a/css/styles.css
+++ b/css/styles.css
@@ -413,29 +413,13 @@ img {
 
 /* -- Section advantages -- */
 
-.title-advantages-list {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.1;
-  color: var(--title-color);
-}
-.text-advantages-list {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
-  color: var(--text-color);
-  letter-spacing: 0.03em;
-}
-.title-advantages-list {
-  margin-bottom: 10px;
-}
-.paragraph-advantages:not(:last-child) {
-  margin-right: 30px;
-}
-.paragraph-advantages {
+.advantages__paragraph {
   max-width: 270px;
 }
-.box-advantages-list {
+.advantages__paragraph:not(:last-child) {
+  margin-right: 30px;
+}
+.advantages__list {
   width: 270px;
   height: 120px;
   background-color: #f5f4fa;
@@ -445,25 +429,38 @@ img {
   align-items: center;
   justify-content: center;
 }
-.icon-advantages {
+.advantages__icon {
   width: 70px;
   height: 70px;
 }
+.advantages__title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  color: var(--title-color);
+  margin-bottom: 10px;
+}
+.advantages__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  color: var(--text-color);
+  letter-spacing: 0.03em;
+}
+
 /* -- total per section -- */
 
-.list-advantages,
-.list-presentation,
-.list-team,
-.list-customers {
+.advantages,
+.presentation,
+.team,
+.customers {
   display: flex;
 }
-.title-large {
+.title--large {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
   color: var(--title-color);
-}
-.title-large {
   display: block;
   margin: 0 auto;
   text-align: center;
@@ -475,14 +472,17 @@ img {
 .presentation-section {
   padding-top: 0;
 }
-.paragraph-presentation:not(:last-child) {
+.presentation__paragraph:not(:last-child) {
   margin-right: 30px;
 }
-
-.thumb-presentation {
+.presentation__thumb {
   position: relative;
 }
-.box-presentation {
+.presentation__img {
+  width: 370px;
+  height: 294px;
+}
+.presentation__box {
   width: 370px;
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
@@ -492,7 +492,7 @@ img {
   position: absolute;
   bottom: 0;
 }
-.title-box-presentation {
+.presentation__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
@@ -504,7 +504,7 @@ img {
 .team-section {
   background-color: var(--background-second-color);
 }
-.paragraph-team {
+.team__paragraph {
   width: 270px;
   background-color: #ffffff;
   border-bottom-right-radius: 4px;
@@ -512,47 +512,50 @@ img {
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
 }
-.paragraph-team:not(:last-child) {
+.team__paragraph:not(:last-child) {
   margin-right: 30px;
 }
-.paragraph-team-messengers {
-  width: 44px;
-  height: 44px;
+.team__img {
+  width: 270px;
+  height: 260px;
 }
-.paragraph-team-messengers:not(:last-child) {
-  margin-right: 10px;
-}
-.list-team-messengers {
-  display: flex;
-  margin-top: 16px;
-  justify-content: center;
-}
-.title-team-list {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-  color: var(--title-color);
-}
-.title-team-list {
-  margin-bottom: 10px;
-}
-.text-team-list {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.2;
-  color: var(--text-color);
-}
-.box-team-list {
-  text-decoration: none;
-}
-.box-team-list {
+.team__box {
   display: block;
   padding-top: 30px;
   padding-bottom: 30px;
   margin: 0 auto;
   text-align: center;
+  text-decoration: none;
 }
-.team-messengers {
+.team__title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  color: var(--title-color);
+  margin-bottom: 10px;
+}
+.team__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  color: var(--text-color);
+}
+
+/* -- messengers -- */
+
+.messengers {
+  display: flex;
+  margin-top: 16px;
+  justify-content: center;
+}
+.messengers__paragraph {
+  width: 44px;
+  height: 44px;
+}
+.messengers__paragraph:not(:last-child) {
+  margin-right: 10px;
+}
+.messengers__link {
   width: 100%;
   height: 100%;
   border-radius: 50px;
@@ -565,26 +568,26 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-messengers:hover,
-.team-messengers:focus {
+.messengers__link:hover,
+.messengers__link:focus {
   background-color: #2196f3;
   fill: #ffffff;
 }
-.icon-team {
+.messengers__icon {
   width: 20px;
   height: 20px;
 }
 
 /* -- Section customers -- */
 
-.paragraph-customers {
+.customers__paragraph {
   width: 170px;
   height: 92px;
 }
-.paragraph-customers:not(:last-child) {
+.customers__paragraph:not(:last-child) {
   margin-right: 30px;
 }
-.customers-client {
+.customers__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -598,19 +601,27 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.customers-client:hover,
-.customers-client:focus {
+.customers__link:hover,
+.customers__link:focus {
   border-color: #2196f3;
   fill: #2196f3;
 }
-.client {
+.customers__icon {
   width: 106px;
   height: 60px;
 }
 
 /* -- Section portfolio -- */
 
-.button-portfolio {
+.button-list {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+.button-list__paragraph:not(:last-child) {
+  margin-right: 8px;
+}
+.button-list__button {
   background-color: var(--background-second-color);
   font-weight: 500;
   font-size: 16px;
@@ -619,85 +630,55 @@ img {
   cursor: pointer;
   border-radius: 4px;
   border: 0;
-}
-.button-portfolio {
   padding: 6px 22px;
   transition-property: background-color, color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button-portfolio:hover,
-.button-portfolio:focus {
+.button-list__button:hover,
+.button-list__button:focus {
   background-color: var(--active-button-color);
   color: var(--background-header-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.list-button,
-.list-portfolio {
+
+.portfolio {
   display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
 }
-.list-button {
-  margin-bottom: 50px;
-  justify-content: center;
+.portfolio__paragraph {
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
-.paragraph-button-portfolio:not(:last-child) {
-  margin-right: 8px;
-}
-.card-portfolio {
+.portfolio__link {
   text-decoration: none;
   display: block;
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.card-portfolio:hover,
-.card-portfolio:focus {
+.portfolio__link:hover,
+.portfolio__link:focus {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
 }
-.paragraph-card-portfolio {
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-.list-portfolio {
-  flex-wrap: wrap;
-}
-.list-portfolio {
-  margin-right: -30px;
-  margin-bottom: -30px;
-}
-.box-portfolio-list {
-  padding: 20px 24px;
-  border: 1px solid #eeeeee;
-  border-top: 0;
-}
-.title-portfolio-list {
-  margin-bottom: 4px;
-}
-.title-portfolio-list {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  color: var(--title-color);
-}
-.text-portfolio-list {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.9;
-  color: var(--text-color);
-}
-
-.thumb-portfolio {
+.portfolio__thumb {
   position: relative;
   overflow: hidden;
   bottom: 0;
 }
-.card-portfolio:hover .box-portfolio,
-.card-portfolio:focus .box-portfolio {
+.portfolio__img {
+  width: 370px;
+  height: 294px;
+}
+.portfolio__link:hover .portfolio__box,
+.portfolio__link:focus .portfolio__box {
   opacity: 1;
   transform: translateY(-100%);
 }
-.box-portfolio {
+.portfolio__box {
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
@@ -710,26 +691,45 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.text-box-portfolio {
+.portfolio__text {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.6;
   color: var(--background-header-color);
   padding: 63px 24px;
 }
+.portfolio__list {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: 0;
+}
+.portfolio__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  color: var(--title-color);
+  margin-bottom: 4px;
+}
+.portfolio__subtitle {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.9;
+  color: var(--text-color);
+}
 
 /* -- Section footer -- */
 
 .footer {
-  background-color: var(--background-footer-color);
-}
-.footer {
   padding-top: 60px;
   padding-bottom: 60px;
+  background-color: var(--background-footer-color);
 }
 .footer-container {
   display: flex;
   align-items: baseline;
+}
+.footer-logo {
+  width: 235px;
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -743,15 +743,12 @@ img {
   color: var(--background-header-color);
 }
 .footer-address {
-  width: 235px;
-}
-.address {
   margin-top: 20px;
 }
-.paragraph-address:not(:last-child) {
+.footer-address__paragraph:not(:last-child) {
   margin-bottom: 9px;
 }
-.address .link {
+.footer-address__link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
@@ -762,88 +759,55 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link-address {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
-  color: var(--background-header-color);
-  text-decoration: none;
-  font-style: normal;
-}
-.address .link:hover,
-.address .link:focus {
+.footer-address__link--colour {
   color: var(--background-header-color);
 }
-
+.footer-address__link:hover,
+.footer-address__link:focus {
+  color: var(--background-header-color);
+}
 .footer-messengers {
   margin-left: 70px;
 }
-.title-messengers {
+.footer__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   color: var(--background-header-color);
 }
-.list-messengers {
+.footer-messengers__list {
   display: flex;
   margin-top: 20px;
   justify-content: center;
 }
-.paragraph-messengers {
-  width: 44px;
-  height: 44px;
-}
-.paragraph-messengers:not(:last-child) {
-  margin-right: 10px;
-}
-.link-messengers {
-  width: 100%;
-  height: 100%;
-  border-radius: 50px;
-  fill: #ffffff;
-  background-color: rgba(255, 255, 255, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition-property: background-color, fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.link-messengers:hover,
-.link-messengers:focus {
-  background-color: #2196f3;
+.messengers__link--сolour {
   fill: #ffffff;
 }
-.icon {
-  width: 20px;
-  height: 20px;
-}
-
 .form-footer {
   margin-left: 93px;
 }
-.list-form {
+.form-footer__list {
   display: flex;
   margin-top: 20px;
   justify-content: center;
 }
-.footer-form-input {
+.form-footer__input {
   min-width: 358px;
   padding: 15px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: var(--background-footer-color);
 }
-.footer-form-input::placeholder {
+.form-footer__input::placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
   color: rgba(255, 255, 255, 0.6);
 }
-.footer-form-input:focus {
+.form-footer__input:focus {
   outline: none;
 }
-.btn-footer-form {
+.form-footer__button {
   background-color: var(--active-button-color);
   font-weight: 700;
   font-size: 16px;
@@ -851,7 +815,7 @@ img {
   color: var(--background-header-color);
   letter-spacing: 0.06em;
 }
-.btn-footer-form {
+.form-footer__button {
   display: inline-flex;
   align-items: center;
   min-width: 200px;
@@ -865,11 +829,10 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.btn-footer-form:hover {
+.form-footer__button:hover {
   background-color: #188ce8;
 }
-.button-icon-send {
+.form-footer__icon {
   content: " ";
   display: inline-block;
   width: 24px;
