--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* -- utils  _variables.scss -- $-добавить перед названием*/
 :root {
   --title-color: #212121;
   --text-color: #757575;
@@ -7,6 +8,8 @@
   --background-header-color: #ffffff;
   --background-second-color: #f5f4fa;
 }
+
+/* -- utils  _base-style.scss -- */
 ul,
 p,
 h1,
@@ -63,23 +66,167 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.advantages,
+.presentation,
+.team,
+.customers {
+  display: flex;
+}
+.title--large {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  color: var(--title-color);
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+/* -- utils  _pseudo-classes.scss -- */
+
 .button:hover, 
 .button:focus {
   background-color: var(--hover-button-color);
   color: var(--background-header-color);
 }
 
-/* -- Section header -- */
+.navigator__link:hover, :focus, :active {
+  color: var(--active-button-color);
+}
 
-.header {
-  background-color: var(--background-header-color);
-  border-bottom: 1px solid #ececec;
+.contacts__link:hover, :focus {
+  color: var(--active-button-color);
 }
-.header-container,
-.nav {
-  display: flex;
-  align-items: center;
+
+.navigator__link--current:hover::after {
+  opacity: 1;
 }
+
+.button-close:hover {
+  fill: #2196f3;
+}
+
+.form-modal__textarea:focus,
+.form-modal__input:focus {
+  border-color: #2196f3;
+  outline: none;
+}
+
+.form-modal__input:focus ~ .form-modal__icon {
+  fill: #2196f3;
+}
+
+.messengers__link:hover,
+.messengers__link:focus {
+  background-color: #2196f3;
+  fill: #ffffff;
+}
+
+.customers__link:hover,
+.customers__link:focus {
+  border-color: #2196f3;
+  fill: #2196f3;
+}
+
+.button-list__button:hover,
+.button-list__button:focus {
+  background-color: var(--active-button-color);
+  color: var(--background-header-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.portfolio__link:hover,
+.portfolio__link:focus {
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+.portfolio__link:hover .portfolio__box,
+.portfolio__link:focus .portfolio__box {
+  opacity: 1;
+  transform: translateY(-100%);
+}
+
+.footer-address__link:hover,
+.footer-address__link:focus {
+  color: var(--background-header-color);
+}
+
+.form-footer__input:focus {
+  outline: none;
+}
+
+.form-footer__button:hover {
+  background-color: #188ce8;
+}
+
+.checkbox__input:checked + .checkbox__icon {
+  background-color: var(--active-button-color);
+  border-color: var(--active-button-color);
+  background-image: url(../images/icons.svg/form/check.svg);
+  background-size: contain;
+  background-origin: border-box;
+}
+
+.advantages__paragraph:not(:last-child) {
+  margin-right: 30px;
+}
+
+.presentation__paragraph:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team__paragraph:not(:last-child) {
+  margin-right: 30px;
+}
+
+.messengers__paragraph:not(:last-child) {
+  margin-right: 10px;
+}
+
+.customers__paragraph:not(:last-child) {
+  margin-right: 30px;
+}
+
+.button-list__paragraph:not(:last-child) {
+  margin-right: 8px;
+}
+
+.footer-address__paragraph:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+/* -- utils  _pseudo-elements.scss -- */
+
+.navigator__link--current::after {
+  display: inline-block;
+  position: absolute;
+  content: " ";
+  width: 100%;
+  height: 4px;
+  background-color: rgba(33, 150, 243, 1);
+  border-radius: 4px;
+  bottom: -1px;
+  left: 0;
+}
+
+.form-modal__textarea::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-footer__input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+/* -- components  _logo.scss -- */
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -91,6 +238,20 @@ img {
 }
 .logo-right {
   color: var(--title-color);
+}
+.logo-right--colour {
+  color: var(--background-header-color);
+}
+/* -- components  _header.scss -- */ 
+
+.header {
+  background-color: var(--background-header-color);
+  border-bottom: 1px solid #ececec;
+}
+.header-container,
+.nav {
+  display: flex;
+  align-items: center;
 }
 .navigator {
   display: flex;
@@ -111,9 +272,20 @@ img {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.navigator__link:hover, :focus, :active {
-  color: var(--active-button-color);
+.navigator__link,
+.contacts__link {
+  display: inline-flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts {
   display: flex;
@@ -129,19 +301,6 @@ img {
   color: var(--text-color);
   text-decoration: none;
 }
-.contacts__link:hover, :focus {
-  color: var(--active-button-color);
-}
-.navigator__link,
-.contacts__link {
-  display: inline-flex;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 .contacts__icon--mail {
   width: 16px;
   height: 12px;
@@ -155,30 +314,7 @@ img {
   fill: currentColor;
 }
 
-/* -- Underline function -- */
-
-.navigator__link--current {
-  position: relative;
-  transition-property: opacity;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigator__link--current::after {
-  display: inline-block;
-  position: absolute;
-  content: " ";
-  width: 100%;
-  height: 4px;
-  background-color: rgba(33, 150, 243, 1);
-  border-radius: 4px;
-  bottom: -1px;
-  left: 0;
-}
-.navigator__link--current:hover::after {
-  opacity: 1;
-}
-
-/* -- Section hero -- */
+/* -- components  _hero.scss -- */
 
 .hero {
   max-width: 1600px;
@@ -215,7 +351,7 @@ img {
   margin: 0 auto;
 }
 
-/* -- Modal window -- */
+/* -- components  _form-modal.scss -- */
 
 .backdrop {
   position: fixed;
@@ -266,7 +402,6 @@ img {
   margin-right: auto;
   margin-top: 30px;
 }
-
 .button-close {
   position: absolute;
   width: 30px;
@@ -286,21 +421,15 @@ img {
   width: 18px;
   height: 18px;
 }
-.button-close:hover {
-  fill: #2196f3;
-}
-
 .form-modal {
   display: flex;
   flex-direction: column;
   position: relative;
   margin-bottom: 10px;
 }
-
 .form-modal--last {
   margin-bottom: 0;
 }
-
 .form-modal__label {
   margin-bottom: 4px;
   font-weight: 400;
@@ -309,7 +438,6 @@ img {
   color: var(--text-color);
   letter-spacing: 0.01em;
 }
-
 .form-modal__input {
   height: 40px;
   padding-left: 40px;
@@ -323,7 +451,6 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .form-modal__textarea {
   height: 120px;
   padding: 12px 16px;
@@ -335,7 +462,6 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .form-modal__icon {
   position: absolute;
   top: 29px;
@@ -346,24 +472,6 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.form-modal__textarea::placeholder {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.2;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.form-modal__textarea:focus,
-.form-modal__input:focus {
-  border-color: #2196f3;
-  outline: none;
-}
-
-.form-modal__input:focus ~ .form-modal__icon {
-  fill: #2196f3;
-}
-
 .checkbox__label {
   margin-top: 20px;
   display: flex;
@@ -375,7 +483,6 @@ img {
   color: var(--text-color);
   letter-spacing: 0.03em;
 }
-
 .checkbox__input {
   position: absolute;
   width: 1px;
@@ -386,7 +493,6 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
 .checkbox__icon {
   width: 16px;
   height: 15px;
@@ -397,27 +503,15 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .checkbox__link {
   margin-left: 5px;
   color: var(--active-button-color);
 }
 
-.checkbox__input:checked + .checkbox__icon {
-  background-color: var(--active-button-color);
-  border-color: var(--active-button-color);
-  background-image: url(../images/icons.svg/form/check.svg);
-  background-size: contain;
-  background-origin: border-box;
-}
-
-/* -- Section advantages -- */
+/* -- components  _advantages.scss -- */
 
 .advantages__paragraph {
   max-width: 270px;
-}
-.advantages__paragraph:not(:last-child) {
-  margin-right: 30px;
 }
 .advantages__list {
   width: 270px;
@@ -448,32 +542,10 @@ img {
   letter-spacing: 0.03em;
 }
 
-/* -- total per section -- */
-
-.advantages,
-.presentation,
-.team,
-.customers {
-  display: flex;
-}
-.title--large {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.2;
-  color: var(--title-color);
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-/* -- Section presentation -- */
+/* -- components  _presentation.scss -- */
 
 .presentation-section {
   padding-top: 0;
-}
-.presentation__paragraph:not(:last-child) {
-  margin-right: 30px;
 }
 .presentation__thumb {
   position: relative;
@@ -499,7 +571,7 @@ img {
   color: var(--background-header-color);
 }
 
-/* -- Section team -- */
+/* -- components  _team.scss -- */
 
 .team-section {
   background-color: var(--background-second-color);
@@ -511,9 +583,6 @@ img {
   border-bottom-left-radius: 4px;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
-}
-.team__paragraph:not(:last-child) {
-  margin-right: 30px;
 }
 .team__img {
   width: 270px;
@@ -541,7 +610,7 @@ img {
   color: var(--text-color);
 }
 
-/* -- messengers -- */
+/* -- components  _messengers.scss -- */
 
 .messengers {
   display: flex;
@@ -551,9 +620,6 @@ img {
 .messengers__paragraph {
   width: 44px;
   height: 44px;
-}
-.messengers__paragraph:not(:last-child) {
-  margin-right: 10px;
 }
 .messengers__link {
   width: 100%;
@@ -568,24 +634,16 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.messengers__link:hover,
-.messengers__link:focus {
-  background-color: #2196f3;
-  fill: #ffffff;
-}
 .messengers__icon {
   width: 20px;
   height: 20px;
 }
 
-/* -- Section customers -- */
+/* -- components  _customers.scss -- */
 
 .customers__paragraph {
   width: 170px;
   height: 92px;
-}
-.customers__paragraph:not(:last-child) {
-  margin-right: 30px;
 }
 .customers__link {
   display: flex;
@@ -601,25 +659,17 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.customers__link:hover,
-.customers__link:focus {
-  border-color: #2196f3;
-  fill: #2196f3;
-}
 .customers__icon {
   width: 106px;
   height: 60px;
 }
 
-/* -- Section portfolio -- */
+/* -- components  _portfolio.scss -- */
 
 .button-list {
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
-}
-.button-list__paragraph:not(:last-child) {
-  margin-right: 8px;
 }
 .button-list__button {
   background-color: var(--background-second-color);
@@ -635,13 +685,6 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button-list__button:hover,
-.button-list__button:focus {
-  background-color: var(--active-button-color);
-  color: var(--background-header-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
 .portfolio {
   display: flex;
   flex-wrap: wrap;
@@ -659,11 +702,6 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio__link:hover,
-.portfolio__link:focus {
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    0px 1px 1px rgba(0, 0, 0, 0.12);
-}
 .portfolio__thumb {
   position: relative;
   overflow: hidden;
@@ -672,11 +710,6 @@ img {
 .portfolio__img {
   width: 370px;
   height: 294px;
-}
-.portfolio__link:hover .portfolio__box,
-.portfolio__link:focus .portfolio__box {
-  opacity: 1;
-  transform: translateY(-100%);
 }
 .portfolio__box {
   width: 100%;
@@ -717,7 +750,7 @@ img {
   color: var(--text-color);
 }
 
-/* -- Section footer -- */
+/* -- components  _footer.scss -- */
 
 .footer {
   padding-top: 60px;
@@ -731,22 +764,8 @@ img {
 .footer-logo {
   width: 235px;
 }
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  color: var(--active-button-color);
-  text-decoration: none;
-}
-.logo-right--colour {
-  color: var(--background-header-color);
-}
 .footer-address {
   margin-top: 20px;
-}
-.footer-address__paragraph:not(:last-child) {
-  margin-bottom: 9px;
 }
 .footer-address__link {
   font-weight: 400;
@@ -760,10 +779,6 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-address__link--colour {
-  color: var(--background-header-color);
-}
-.footer-address__link:hover,
-.footer-address__link:focus {
   color: var(--background-header-color);
 }
 .footer-messengers {
@@ -798,15 +813,6 @@ img {
   border-radius: 4px;
   background-color: var(--background-footer-color);
 }
-.form-footer__input::placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.6;
-  color: rgba(255, 255, 255, 0.6);
-}
-.form-footer__input:focus {
-  outline: none;
-}
 .form-footer__button {
   background-color: var(--active-button-color);
   font-weight: 700;
@@ -828,9 +834,6 @@ img {
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.form-footer__button:hover {
-  background-color: #188ce8;
 }
 .form-footer__icon {
   content: " ";
