--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,14 @@
-@import "./vars";
-@import "./portfolio";
+@import "./utils/variables";
+@import "./utils/base-style";
+@import "./components/logo";
+@import "./components/header";
+@import "./components/underline";
+@import "./components/hero";
+@import "./components/form-modal";
+@import "./components/advantages";
+@import "./components/presentation";
+@import "./components/team";
+@import "./components/messengers";
+@import "./components/customers";
+@import "./components/portfolio";
+@import "./components/footer";
