--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -8,10 +8,10 @@
     display: block;
 }
 
-.logo-right {
+.logo__right {
     color: $title-color;
 }
 
-.logo-right--colour {
+.logo__right--colour {
     color: $background-header-color;
 }
