--- a/sass/utils/_base-style.scss
+++ b/sass/utils/_base-style.scss
@@ -75,7 +75,7 @@ img {
     display: flex;
 }
 
-.title--large {
+.section__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.2;
